# obs-studio

UI/: ui-validation.cpp  window-basic-settings-stream.cpp  window-basic-settings.hpp
plugins/: CMakeLists.txt
plugins/obs-qsv11/: QSV_Encoder_Internal.cpp  QSV_Encoder_Internal.h
plugins/obs-vishare/: CMakeLists.txt  obs-vishare.cpp  vishare-output.cpp  vishare-output.h  vishare-service.cpp  vishare-service.h  vishare-utils.h
plugins/obs-vishare/cmake/: legacy.cmake
plugins/obs-vishare/cmake/windows/: obs-module.rc.in
plugins/obs-vishare/data/locale/: af-ZA.ini  ar-SA.ini  be-BY.ini  bg-BG.ini  ca-ES.ini  cs-CZ.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  et-EE.ini  fa-IR.ini  fi-FI.ini  fr-FR.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kaa.ini  ko-KR.ini  ms-MY.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ru-RU.ini  si-LK.ini  sk-SK.ini  sl-SI.ini  sv-SE.ini  tr-TR.ini  ug-CN.ini  uk-UA.ini  vi-VN.ini  (+2 more)
plugins/rtmp-services/data/schema/: service-schema-v5.json
pyrecv/: recv.py
